# he6p2024

./: .artemislogon.C.in  .gitignore  .log_mwdc  .thisartemis-crib.sh.in  CMakeLists.txt  CMakeLists.txt.backup  README.md  artemislogon.C  check.txt  ff.sh  mapper.conf  requirements.txt  setbldprm.sh  setmuxprm.sh  sumall.sh  sumall_wo_mwdca.sh  sumall_wo_mwdca_BG.sh  taskstart.sh  userlogon.C
conf/seg/: modulelist.yaml  seglist.yaml
elastic/: CS_cm.emf  CS_cm.wmf  compare.C  elastic.C  elastic_angle_cm.C  elastic_angle_wo_mwdca_cm.C  elastic_wo_mwdca.C  sum.C  sum_test.C  sum_wo_mwdca.C
elastic/CNS_annual_report/: elastic.C
figure/calib/: Calibration with beam.xlsx  calibration for E detectors.xlsx
hist/: default_namer.py
hist/cal/: tel1.yaml
hist/example/: example.hist.yaml  example.inc.yaml
hist/f1/: f1.yaml
hist/f2/: f2.yaml
hist/f3/: f3.yaml  f3.yaml.bak  f3_mwdc.yaml  mwdcb_target.yaml
hist/mwdc/: chkmwdc.tmpl.yaml  mwdc.old.tmpl.yaml  mwdc.yaml
hist/pla/: chkpla.tmpl.yaml
hist/ppac/: chkppac.tmpl.yaml  f1ppac.yaml  f2ppac.yaml
hist/proton/: tel1.yaml  tel2.yaml  tel3.yaml  tel4.yaml  tel5.yaml  tel6.yaml
hist/rf/: rf.yaml
hist/ssd/: dE.tmpl.yaml  dE_XY.tmpl.yaml  dE_XY_allch.tmpl.yaml  dE_cal.tmpl.yaml  f2ssd.yaml  generator.pl  mux.tmpl.yaml  tel_E.yaml
hist/tel/: mux.yaml  tel2.yaml
macro/: AlphaCalibration.C  MUXParamMaker.C  MakeSimpleRoot.C  PPACLineCalibration.C  chkmuxpos.C  dE_E_plot.C  f1.C  f2.C  f3.C  kinematics.C  load_tcutg.C  mwdc.C  plot.C  run_AlphaCalibration.C  run_MUXParamMaker.C  run_PPACLineCalibration.C  run_mwdc.C  scaler.C  setalias.C  setalias_coin.C  setalias_single.C  shift.C  ssd.C  xfitg.C  xstatus.C
macro/analysis/: read.C  read_raw.C  run_Calibration.C  shift.C
macro/backup/: AlphaCalibration.C  MUXParamMaker.C  run_AlphaCalibration.C  run_MUXParamMaker.C
macro/elastic/: ReadElastic.C  ReadElastic.cpp  ReadElastic_RC.C  constant.h  normRoot.sh
mux_tel6/: .~mux_tel6dEY.xlsx  mux_tel6dEY.xlsx
mwdcb_target/: mwdc_x.C  mwdc_y.C
prm/geo/: he6p.yaml  he6p.yaml_  he6p2024.yaml  si26a.yaml
prm/pid/: he6p2024.yaml
prm/ppac/: ch2ns.prm  ch2ns_f2.prm  ch2q.prm  dlppac.yaml  dlppac_f2.yaml  f1ppac.yaml
prm/simulation/: reaction.yaml
prm/ssd/: foutpath
pyscripts/: set_tcutg.py
scripts/: all.sh  check.sh  check_bg_wo_mwdca.sh  check_wo_mwdca.sh  chkmux.sh  make_coinroot.py  make_protonroot.py  make_reconstroot.py  make_singleroot.py  merge_coinroot.py  merge_protonroot.py  merge_singleroot.py  mwdcb_f3target.C  mwdcb_f3target.sh  proton.C  proton_bg_wo_mwdca.C  proton_wo_mwdca.C  run_make_coinroot.sh  run_make_protonroot_wo_mwdca.sh  run_make_reconstroot.sh  run_make_singleroot.sh  test.py
src/: TTemplateData.h  TTemplateProcessor.cc  TTemplateProcessor.h  linkdef_user.h
src-backup/: CMakeLists.txt  TTemplateData.cc
src-backup/mwdc/: TMWDCTrackingProcessor_crib.cc
src-crib/: CMakeLists.txt  CMakeLists2023.txt  CMakeLists2024.txt  TBranchCopyProcessor.cc  TBranchCopyProcessor.h  TEvtNumProcessor.cc  TEvtNumProcessor.h  TF1PPACProcessor.cc  TF1PPACProcessor.h  TModuleData.cc  TModuleData.h  TReadROOTFile.cc  TReadROOTFile.h  TSegmentOutputProcessor.cc  TSegmentOutputProcessor.h  TTimingChargeAllMappingProcessor.cc  TTimingChargeAllMappingProcessor.h  TTimingDataMappingProcessor.cc  TTimingDataMappingProcessor.h  TTreePeriodicEventStore.cc  TTreePeriodicEventStore.h  artcrib_linkdef.h
src-crib/backup/: TTimingChargeAllMappingProcessor.CC_temp
src-crib/commands/: TCatCmdLoopStart.cc  TCatCmdLoopStart.h  TCatCmdLoopStop.cc  TCatCmdLoopStop.h  TCatCmdTCutG.cc  TCatCmdTCutG.h  TCmdDraw.cc  TCmdDraw.h  TCmdErase.cc  TCmdErase.h  TCmdXYblow.cc  TCmdXYblow.h  TCmdXblow.cc  TCmdXblow.h  TCmdXfitg.cc  TCmdXfitg.h  TCmdXstatus.cc  TCmdXstatus.h
src-crib/geo/: TDetectorParameter.cc  TDetectorParameter.h  TTargetParameter.cc  TTargetParameter.h  TUserGeoInitializer.cc  TUserGeoInitializer.h
src-crib/mux/: TMUXCalibrationProcessor.cc  TMUXCalibrationProcessor.h  TMUXData.cc  TMUXData.h  TMUXDataMappingProcessor.cc  TMUXDataMappingProcessor.h  TMUXPositionConverter.cc  TMUXPositionConverter.h  TMUXPositionValidator.cc  TMUXPositionValidator.h
src-crib/prm/: THogeParameter.cc  THogeParameter.h
src-crib/reaction/: TReacAnalysisData.cc  (+5 more)
steering/: chkbeam_coin.yaml  chkbeam_single.yaml  chkf2.yaml  chkf3.yaml  procproton.yaml  procproton_wo_mwdca.yaml  proton.yaml  simSolidAngle.yaml  simSolidAngle_SoliTar.yaml
(+286 files in other folders)
